[gd_scene load_steps=3 format=2]

[ext_resource path="res://src/gui/menus/facility/type/facility_list_item.gd" type="Script" id=2]
[ext_resource path="res://src/gui/menus/resusable/ResourceIcon.tscn" type="PackedScene" id=3]

[node name="FacilityListItem" type="MarginContainer"]
anchor_right = 0.625
margin_bottom = 64.0
size_flags_horizontal = 3
script = ExtResource( 2 )

[node name="Button" type="Button" parent="."]
margin_right = 640.0
margin_bottom = 64.0
rect_min_size = Vector2( 0, 64 )

[node name="HBoxContainer" type="HBoxContainer" parent="."]
margin_right = 640.0
margin_bottom = 64.0
mouse_filter = 2

[node name="ProductIcon" type="TextureRect" parent="HBoxContainer"]
margin_right = 64.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
expand = true
stretch_mode = 6

[node name="Name" type="Label" parent="HBoxContainer"]
margin_left = 68.0
margin_top = 25.0
margin_right = 536.0
margin_bottom = 39.0
size_flags_horizontal = 3

[node name="HBoxContainer" type="HBoxContainer" parent="HBoxContainer"]
margin_left = 540.0
margin_right = 640.0
margin_bottom = 64.0
mouse_filter = 2

[node name="ResourceIcon" parent="HBoxContainer/HBoxContainer" instance=ExtResource( 3 )]
margin_right = 0.0
margin_bottom = 64.0

[node name="Cost" type="Label" parent="HBoxContainer/HBoxContainer"]
margin_left = 4.0
margin_top = 25.0
margin_right = 100.0
margin_bottom = 39.0
rect_min_size = Vector2( 96, 0 )
clip_text = true

[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
